--- a/Views/Admin/POApprove.cshtml
+++ b/Views/Admin/POApprove.cshtml
@@ -87,6 +87,7 @@
                                 <tr>
                                     <th><input type="checkbox" id="seallasnpo" /></th>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POGDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
@@ -106,6 +107,16 @@
                                     <tr>
                                         <td></td>
                                         <td></td>
+                                        <td>
+                                            @if (item.POGDate == "01/01/1900")
+                                            {
+
+                                            }
+                                            else
+                                            {
+                                                @Html.DisplayFor(modelItem => item.POGDate)
+                                            }
+                                                                            </td>
                                         <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                         <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
